--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,25 +1,31 @@
 .content {
-    height:85%;
+    height:80%;
     width:100vw;
     display: flex;
     justify-content: center;
 }
 
-.toolbar {
+.header {
+    font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
+    border-bottom: 1px solid grey;
 
-    border-top: 1px solid grey;
-
-    height: 25%;
+    height: 20%;
     width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.header__column {
+
+    height: 100%;
+    width: 33%;
 }
 
 .column {
     display: flex;
     /*border: 1px solid red;*/
     height: 100%;
-    min-width: 200px;
+    width: 50%;
 }
 
 .column__content {
@@ -27,14 +33,16 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    padding:20px;
+    padding:10px 0px;
     height:100%;
+    width:100%;
+    margin-left:3px;
 }
 /* hack of problem of iscroll when overflow-x:visible;overflow-y:hidden; in same time*/
 .melodies__list-wrapper-wrapper {
 
     padding:0px;
-    padding-right:5px;
+    padding-right:7px;
     margin-bottom: 20px;
     overflow: hidden;
     width: 100%;
@@ -55,6 +63,8 @@
 }
 
 .melodies__list {
+    font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
+    font-size:15px;
 }
 
 .melodies__list-item {
@@ -74,7 +84,7 @@
 .live__button {
     margin: 0px auto;
     padding: 10px 15px;
-    width: 100%;
+    width: 150px;
     background: #b68540;
     display: flex;
 }
@@ -88,9 +98,10 @@
 }
 
 .live__button-text {
+    font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
     color: white;
     margin: auto;
-    font-size:9px;
+    font-size:16px;
 }
 
 .progress-bar {
@@ -99,7 +110,7 @@
     width: 40%;
     height: 100%;
     color:white;
-    font-size: 11px;
+    font-size: 17px;
 }
 
 .progress-bar__content {
@@ -111,7 +122,7 @@
 .progress-bar__line-wrapper {
     margin-top: 8px;
     background-color: grey;
-    width: 100%;
+    width: 80%;
     height: 5px;
     transition-property: all;
     transition-duration: 0.5s;
@@ -131,7 +142,7 @@
     width: 40%;
     height: 100%;
     color:white;
-    font-size: 11px;
+    font-size: 17px;
 }
 
 .tacts-bar__content {
@@ -142,7 +153,7 @@
 
 .tacts-bar__line-wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 8px;
 
     width: 100%;
@@ -152,8 +163,9 @@
 
     background-color: grey;
 
-    width: 32%;
+    width: 18%;
     height: 100%;
+    margin-right: 1px;
     transition-property: all;
     transition-duration: 0.5s;
 }
@@ -163,17 +175,27 @@
 
 
 .logo {
+    display: flex;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+}
+
+.logo img{
     margin: auto;
-    max-width:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .iScrollIndicator {
-    height:25px;
+    height:20px;
     width:3px !important;
     border-radius: 0px !important;
+    background-color: white !important;
+    border: none !important;
 }
 
 .iScrollVerticalScrollbar {
     overflow: visible !important;
-    right:-6px !important;
+    right:-10px !important;
 }
