--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -38,16 +38,31 @@
     width:100%;
     margin-left:3px;
 }
+
+.melodies__list-name {
+    height: 20%;
+    padding-left:9px;
+    color: white;
+}
+
 /* hack of problem of iscroll when overflow-x:visible;overflow-y:hidden; in same time*/
 .melodies__list-wrapper-wrapper {
-
-    padding:0px;
+    position: relative;
+    padding: 0px;
     padding-right:7px;
     margin-bottom: 20px;
     overflow: hidden;
     width: 100%;
     height: 100%;
-    max-height: 80%;
+    max-height: 60%;
+}
+
+.melodies__list-scrollline {
+    height:100%;
+    position: absolute;
+    width:1px;
+    background-color:white;
+    right:3px;
 }
 .melodies__list-wrapper {
     font-size: 10px;
@@ -64,18 +79,33 @@
 
 .melodies__list {
     font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
-    font-size:15px;
+    font-size:16px;
 }
 
 .melodies__list-item {
 
-    padding: 10px;
+    padding:7px;
 
     /*background-color: rgba(0,0,0,0.1);*/
 }
 
 .melodies__list-item_active {
     color: white;
+    border-top: 1px solid #b68540;
+    border-bottom: 1px solid #b68540;
+    border-left: 3px solid #b68540;
+    border-right: 3px solid #b68540;
+    box-sizing: border-box;
+    margin-bottom: -1px;
+}
+
+.melodies__list-item span {
+    pointer-events: none;
+}
+
+.melodies__list-item_active span {
+    margin-left: -3px;
+    margin-top: -1px;
 }
 
 .live-button__wrapper {
@@ -85,16 +115,12 @@
     margin: 0px auto;
     padding: 10px 15px;
     width: 150px;
-    background: #b68540;
+    border: 3px solid #b68540;
     display: flex;
 }
 
 .live__button_active {
-    margin: 0px auto;
-    padding: 10px 15px;
-    width: 100%;
     background: #b68540;
-    display: flex;
 }
 
 .live__button-text {
