--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,73 +10,92 @@
 }
 
 .players-id__logo {
-    position: absolute;
-    left: 0px;
-    top: 0px;
+    display: flex;
+    height: 20%;
+    width: 100vw;
+}
+
+.players-id__logo img {
+    margin: auto;
+    max-height:100%;
+}
+
+.players-id__message-block {
+    display: flex;
+    height: 20%;
+    width: 100vw;
+    font-family: BenderBlack, Geneva, Arial, Helvetica, sans-serif;
+    color: white;
+
+    text-align: center;
+    padding-top: 20px;
 }
 
 .players-id__message {
     margin: auto;
-    margin-bottom: 15px;
-    font-family: BenderBlack, Geneva, Arial, Helvetica, sans-serif;
-    color: white;
 }
 
 .players-id__buttons {
     display:flex;
-    margin: auto;
-    margin-top: 15px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 0px;
     width:100vw;
+    height: 60%;
+
+    padding-bottom: 60px;
 }
 
 .players-id__buttons-button {
-    margin:auto;
+    margin:5px auto;
     background: #b68540;
-    width: 20%;
+    width: 80%;
+    height: 100%;
     color: white;
     text-align: center;
     padding:5px;
+
+    display: flex;
 }
 
-.content {
-    height:80%;
-    width:100vw;
-    display: flex;
-    justify-content: center;
+.players-id__buttons-button-text {
+    margin: auto;
 }
 
 .header {
     font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
     border-bottom: 1px solid grey;
 
-    height: 20%;
     width: 100vw;
+    height: 20%;
+}
+
+.header__row {
+
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+
+    /*width: 33%;*/
 }
 
 .header__column {
-
-    height: 100%;
-    width: 33%;
+    width: 50% !important;
 }
 
-.column {
-    display: flex;
-    /*border: 1px solid red;*/
-    height: 100%;
-    width: 50%;
-}
-
-.column__content {
-    margin: auto;
+.content {
+    height:80%;
+    width:100vw;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    padding:10px 0px;
-    height:100%;
-    width:100%;
-    margin-left:3px;
+}
+
+.content__row{
+    margin-left: 3px;
+    width: 100vw;
+    height:50%;
+    display: flex;
+    flex-direction:column;
+    padding-bottom:7px;
 }
 
 .melodies__list-name {
@@ -89,8 +108,8 @@
 .melodies__list-wrapper-wrapper {
     position: relative;
     padding: 0px;
-    padding-right:7px;
-    margin-bottom: 20px;
+    padding-right:11px;
+    margin-bottom: 10px;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -102,7 +121,7 @@
     position: absolute;
     width:1px;
     background-color:white;
-    right:3px;
+    right:7px;
 }
 .melodies__list-wrapper {
     font-size: 10px;
