--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -35,6 +35,7 @@ body {
     padding: 0px;
     margin: 0px;
     overflow: hidden;
+    background-color: black;
 }
 
 #root {
@@ -42,7 +43,7 @@ body {
 	display:flex;
 	flex-direction: column;
 	width: 100vw;
-	height: 100vh;
+	height: 90vh;
 	background-color: black;
 
     color: #b68540;
