--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -63,17 +63,20 @@
 }
 
 .header {
+    display:flex;
+    flex-direction: column;
     font-family: BenderRegular, Geneva, Arial, Helvetica, sans-serif;
     border-bottom: 1px solid grey;
 
     width: 100vw;
-    height: 13%;
+    height: 20%;
 }
 
 .header__row {
 
     display: flex;
     width: 100%;
+    height: 50%;
 
     /*width: 33%;*/
 }
@@ -211,7 +214,6 @@
     height: 100%;
     color:white;
     font-size: 17px;
-    display: none;
 }
 
 .progress-bar__content {
@@ -242,7 +244,6 @@
     height: 100%;
     color:white;
     font-size: 17px;
-    display: none;
 }
 
 .tacts-bar__content {
